<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@null"
    android:orientation="vertical"
    tools:context="work.hin.skyfileclient.view.splash.onboard.OnBoard_1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cyan"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="56dp" />

        <TextView
            android:id="@+id/title_small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onboard_title_small_3"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <ImageView
            android:id="@+id/illustration"
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_illustration_recoverable" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#246e8d"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="65dp" />

        <TextView
            android:id="@+id/title_big"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onboard_title_big_3"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/description_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="10sp"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:text="@string/onboard_title_text_3"
            android:textColor="#ffffff"
            android:textSize="14sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="150dp" />

    </LinearLayout>

</LinearLayout>
