<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="work.hin.skyfileclient.view.detail.DetailActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="156dp"
        android:background="@color/colorPrimary">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@color/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/file_big_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="72dp"
                    android:maxLines="1"
                    android:text="2017年度工作汇报"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_default" />

                <TextView
                    android:id="@+id/file_small_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="72dp"
                    android:maxLines="1"
                    android:text="6.5 MB · DOCX · 2018/2/10"
                    android:textColor="#98c3d5"
                    android:textSize="12sp" />
            </LinearLayout>

            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="14dp"
                android:paddingLeft="@dimen/margin_default"
                android:paddingTop="14dp"
                android:text="@string/file_detail_section_1"
                android:textColor="@color/greyDark"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/margin_default"
                android:paddingRight="@dimen/margin_default">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/itemDivider" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="36dp"
                            android:gravity="center_vertical"
                            android:paddingRight="16dp"
                            android:text="@string/file_detail_file_name"
                            android:textColor="@color/greyLight"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/file_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:text="2017年度工作汇报.docx"
                            android:textColor="@color/black"
                            android:textSize="14sp" />

                    </TableRow>

                    <TableRow
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="36dp"
                            android:gravity="center_vertical"
                            android:paddingRight="16dp"
                            android:text="@string/file_detail_file_size"
                            android:textColor="@color/greyLight"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/file_size"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:text="6.5 MB"
                            android:textColor="@color/black"
                            android:textSize="14sp" />

                    </TableRow>

                    <TableRow
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="36dp"
                            android:gravity="center_vertical"
                            android:paddingRight="16dp"
                            android:text="@string/file_detail_upload_date"
                            android:textColor="@color/greyLight"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/file_upload_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:text="2018 年 2 月 10 日 14:39"
                            android:textColor="@color/black"
                            android:textSize="14sp" />

                    </TableRow>

                    <TableRow
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="36dp"
                            android:gravity="center_vertical"
                            android:paddingRight="16dp"
                            android:text="@string/file_detail_password_protect"
                            android:textColor="@color/greyLight"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/file_password_protect"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:text="是（OpenSSL，AES-256-CBC）"
                            android:textColor="@color/black"
                            android:textSize="14sp" />

                    </TableRow>

                </TableLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.constraint.ConstraintLayout>
