<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start">

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="work.hin.skyfileclient.view.home.HomeActivity">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="25dp"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view_upload"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view_file"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>


        </android.support.v4.widget.NestedScrollView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@drawable/ic_add" />

    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_home">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp">

            <TableRow
                android:id="@+id/list_item_file"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginTop="20dp"
                    android:clickable="false"
                    android:src="@drawable/ic_file" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="64dp"
                    android:clickable="false"
                    android:gravity="center_vertical"
                    android:text="@string/sidenav_list_1"
                    android:textColor="@color/blueLight"
                    android:textSize="14sp" />
            </TableRow>

            <TableRow
                android:id="@+id/list_item_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginTop="20dp"
                    android:clickable="false"
                    android:src="@drawable/ic_notification" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="64dp"
                    android:clickable="false"
                    android:gravity="center_vertical"
                    android:text="@string/sidenav_list_2"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </TableRow>

            <TableRow
                android:id="@+id/list_item_cart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginTop="20dp"
                    android:clickable="false"
                    android:src="@drawable/ic_cart" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="64dp"
                    android:clickable="false"
                    android:gravity="center_vertical"
                    android:text="@string/sidenav_list_3"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </TableRow>

            <TableRow
                android:id="@+id/list_item_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginTop="20dp"
                    android:clickable="false"
                    android:src="@drawable/ic_settings" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="64dp"
                    android:clickable="false"
                    android:gravity="center_vertical"
                    android:text="@string/sidenav_list_4"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </TableRow>

            <TableRow
                android:id="@+id/list_item_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginTop="20dp"
                    android:clickable="false"
                    android:src="@drawable/ic_infomation" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="64dp"
                    android:clickable="false"
                    android:gravity="center_vertical"
                    android:text="@string/sidenav_list_5"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </TableRow>

        </TableLayout>

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
